Add some favorite procedures

--- a/src/components/DishTypeBar/DishTypeBar.module.css
+++ b/src/components/DishTypeBar/DishTypeBar.module.css
@@ -11,6 +11,15 @@
   border-left: none;
 }
 
+.slogan {
+  text-align: center;
+    font-size: var(--font-size-m);
+    line-height: 150%;
+    color: var(--main-text-color);
+}
+
+
+
 /* .active {
   font-weight: var(--font-weight-l);
   color: var(--accent-color);
