--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -1,4 +1,5 @@
 .container {
+  /* position: relative; */
   width: 125px;
   height: calc(100vh - 64px);
 
@@ -16,7 +17,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
+  /* cursor: pointer; */
+    cursor: default;
 
   height: 100%;
 }
@@ -35,6 +37,9 @@
   background: var(--secondary-background-color);
 
   transition: all 250ms linear;
+
+
+/* cursor: pointer; */
 }
 
 .link svg {
@@ -43,9 +48,31 @@
   margin-bottom: 6px;
 }
 
+
+
 .link_active {
   fill: var(--third-text-color);
 
   color: var(--third-text-color);
   background: linear-gradient(218.57deg, #ffab18 -6.67%, #ff2197 137.69%);
+}
+
+.link_disable {
+  cursor: default;
+  pointer-events: none;
+}
+
+.favInfo {
+  /* position: absolute;
+  top: 340px;
+  left: 7px; */
+  width: 110px;
+  padding: 5px;
+
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--accent-color);
+  background-color: var(--button-color-disabled);
+  border-radius: 5%;
 }
