--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: center;
   /* cursor: pointer; */
-    cursor: default;
+  cursor: default;
 
   height: 100%;
 }
@@ -35,11 +35,10 @@
   width: 80px;
   color: var(--secondary-text-color);
   background: var(--secondary-background-color);
-
+  border: none;
   transition: all 250ms linear;
 
-
-/* cursor: pointer; */
+  cursor: pointer;
 }
 
 .link svg {
@@ -47,8 +46,6 @@
   height: 36px;
   margin-bottom: 6px;
 }
-
-
 
 .link_active {
   fill: var(--third-text-color);
@@ -59,7 +56,6 @@
 
 .link_disable {
   cursor: default;
-  pointer-events: none;
 }
 
 .favInfo {
