--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -103,6 +103,10 @@
   margin-bottom: 12px;
 }
 
+.orderOption_detail_isGrab {
+  cursor: grabbing;
+}
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 
