--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   position: relative;
   /* height: 100%; */
-  /* height: 330px; */
+  height: 330px;
   width: 219px;
 
   /* padding: 12px 8px 16px 8px; */
@@ -181,9 +181,9 @@
   align-items: center; */
   padding: 30px;
   width: 1100px;
-  top: 100px;
-  left: 25%;
-  transform: translate(0%, 0%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: var(--secondary-background-color);
   border-radius: var(--border-radius-main);
   transition: opacity 250ms linear, transform 250ms linear;
